--- a/rydde-app-react/public/index.html
+++ b/rydde-app-react/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="./img/1581830.png"/>
+    <link rel="icon" href="./img/woman-sweeping-svgrepo-com.svg"/>
     <title>Rydde App</title>
   </head>
   <body>
