--- a/rydde-app-react/public/index.html
+++ b/rydde-app-react/public/index.html
@@ -12,4 +12,5 @@
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://kit.fontawesome.com/7c2b5789de.js" crossorigin="anonymous"></script>
 </html>
